--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,13 @@ dependencies:
   shared_preferences: ^2.2.3
   tflite_flutter: ^0.11.0
 
+  # The following library adds the Flutter infrastructure
+  bloc: ^8.1.4
+  lottie: ^3.1.2
+  cached_network_image: ^3.4.0
+  shimmer: ^3.0.0
+
+
 dev_dependencies:
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.2
@@ -85,6 +92,10 @@ flutter:
     - assets/icons/
     - assets/icons/menu/
     - assets/icons/nav/
+  # add the fonts in the assets folder and ui assets folder in the assets folder
+    - assets/ui_assets/icons/
+    - assets/ui_assets/images/
+    - assets/ui_assets/lottie/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -116,3 +127,11 @@ flutter_gen:
   output: lib/core/assets/
   integrations:
     flutter_svg: true
+
+  fonts:
+    - family: poppins
+      fonts:
+        - asset: assets/ui_assets/fonts/poppins_bold.ttf
+        - asset: assets/ui_assets/fonts/poppins_medium.ttf
+        - asset: assets/ui_assets/fonts/poppins_regular.ttf
+        - asset: assets/ui_assets/fonts/poppins_semi_bold.ttf
