--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@mipmap/ic_launcher">
         <!-- TODO: Add your Google Maps API key here -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyDKIlGodFaKIRGpQ4Kj3cNndr0DKt6e-Nc"/>
+               android:value=""/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
