--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,8 @@ dependencies:
 
 
 dev_dependencies:
-  build_runner: ^2.4.6
-  flutter_gen_runner: ^5.3.2
+  build_runner: ^2.4.13
+  flutter_gen_runner: ^5.8.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -92,10 +92,8 @@ flutter:
     - assets/icons/
     - assets/icons/menu/
     - assets/icons/nav/
-  # add the fonts in the assets folder and ui assets folder in the assets folder
-    - assets/ui_assets/icons/
-    - assets/ui_assets/images/
-    - assets/ui_assets/lottie/
+    - assets/lottie/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -128,10 +126,11 @@ flutter_gen:
   integrations:
     flutter_svg: true
 
-  fonts:
-    - family: poppins
-      fonts:
-        - asset: assets/ui_assets/fonts/poppins_bold.ttf
-        - asset: assets/ui_assets/fonts/poppins_medium.ttf
-        - asset: assets/ui_assets/fonts/poppins_regular.ttf
-        - asset: assets/ui_assets/fonts/poppins_semi_bold.ttf
+#  fonts:
+#    - family: poppins
+#      fonts:
+#        - asset: assets/fonts/poppins_bold.ttf
+#        - asset: assets/fonts/poppins_medium.ttf
+#        - asset: assets/fonts/poppins_regular.ttf
+#        - asset: assets/fonts/poppins_semi_bold.ttf
+#
